Fix image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 <body>
   <div class="stage">
     <!-- Your combined monitor/title/tag art -->
-    <img class="intro-bg" src="./intro-bg.png" alt="" />
+    <img class="intro-bg" src="./intro-bg.png.png" alt="" />
 
     <!-- This is the “screen window” where we place interactive/animated elements -->
     <div class="screen" id="screen">
-      <img class="ufo" src="./ufo.png" alt="" />
+      <img class="ufo" src="./ufo.png.png" alt="" />
     </div>
   </div>
 </body>
