Update UFO position and simplify styles
Adjusted UFO positioning and removed unnecessary styles.

--- a/index.html
+++ b/index.html
@@ -83,19 +83,16 @@
 
     /* ===== UFO ===== */
      .ufo{
+  .ufo{
   position:absolute;
   left:50%;
-  top:28%;
-
-  /* SIZE: increase this */
+  top:34%;
   width:60%;
   height:auto;
-
-  /* center it */
-  transform: translate(-50%, 0);
-
-  opacity:.95;
+  transform:translateX(-50%);
   pointer-events:none;
+}
+
 
   /* FLOATING (this is the key line) */
   animation: ufoHover 4.5s ease-in-out infinite;
