--- a/index.html
+++ b/index.html
@@ -2,140 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PUSC1VER5E</title>
-  <style>
-    :root{
-      /* ====== SCREEN WINDOW TUNING ======
-         These are the ONLY numbers you tweak to align the “live screen”
-         with the monitor glass area in your intro-bg.png.
-      */
-      --screen-left: 16.5%;
-      --screen-top:  14.5%;
-      --screen-w:    67%;
-      --screen-h:    74%;
-      --screen-radius: 18px;
-    }
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>PU5C1VER5E</title>
 
-    html,body{
+  <style>
+    html, body{
       height:100%;
       margin:0;
       background:#000;
-      overflow:hidden;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      display:grid;
+      place-items:center;
     }
 
-    /* Center the whole composition on the page */
-    .stage{
+    .monitorWrap{
       position:relative;
-      width:min(1100px, 92vw);
-      aspect-ratio: 1 / 1; /* your intro bg is basically square */
-      margin: 0 auto;
-      top: 50%;
-      transform: translateY(-50%);
+      width:min(980px, 92vw);
+      aspect-ratio: 1 / 1;
     }
 
-    /* Your single “all-in-one” background art */
-    .intro-bg{
+    :root{
+      --screen-left: 14.5%;
+      --screen-top: 13.5%;
+      --screen-w: 71%;
+      --screen-h: 69%;
+      --screen-radius: 18px;
+    }
+
+    .screen{
+      position:absolute;
+      left: var(--screen-left);
+      top: var(--screen-top);
+      width: var(--screen-w);
+      height: var(--screen-h);
+      border-radius: var(--screen-radius);
+      overflow:hidden;
+      z-index: 1;
+    }
+
+    .screen .bg{
       position:absolute;
       inset:0;
       width:100%;
       height:100%;
-      object-fit:contain;
+      object-fit: cover;
       display:block;
-      filter: drop-shadow(0 30px 55px rgba(0,0,0,.70));
-      user-select:none;
-      -webkit-user-drag:none;
-      pointer-events:none;
     }
 
-    /* Invisible screen window used to place UFO (and later beams + access UI) */
-    .screen{
+    .monitor{
       position:absolute;
-      left: var(--screen-left);
-      top:  var(--screen-top);
-      width: var(--screen-w);
-      height:var(--screen-h);
-      border-radius: var(--screen-radius);
-      overflow:hidden;
-
-      /* TEMP outline so you can see alignment. Remove later. */
-      outline: 1px solid rgba(57,255,90,.25);
-    }
-
-    /* Subtle CRT vibe over the “screen” area only */
-    .screen::before{
-      content:"";
-      position:absolute;
-      inset:-2px;
+      inset:0;
+      background: url("./monitor-frame.png") center/contain no-repeat;
       pointer-events:none;
-      opacity:.45;
-      background:
-        radial-gradient(ellipse at center, transparent 40%, rgba(0,0,0,.55) 78%),
-        repeating-linear-gradient(
-          to bottom,
-          rgba(0,0,0,.00) 0px,
-          rgba(0,0,0,.00) 2px,
-          rgba(0,0,0,.14) 3px
-        );
-      mix-blend-mode:multiply;
+      z-index: 2;
     }
-
-    /* ===== UFO ===== */
-     .ufo{
-  .ufo{
-  position:absolute;
-  left:50%;
-  top:34%;
-  width:60%;
-  height:auto;
-  transform:translateX(-50%);
-  pointer-events:none;
-}
-
-
-  /* FLOATING (this is the key line) */
-  animation: ufoHover 4.5s ease-in-out infinite;
-
-  filter:
-    drop-shadow(0 0 12px rgba(90,255,140,.25))
-    drop-shadow(0 0 28px rgba(90,255,140,.15));
-}
-
-@keyframes ufoHover{
-  0%   { transform: translate(-50%, 0); }
-  50%  { transform: translate(-50%, -10px); }
-  100% { transform: translate(-50%, 0); }
-}
-
-}
-
-
-      filter:
-        drop-shadow(0 0 14px rgba(90,255,140,.35))
-        drop-shadow(0 0 36px rgba(90,255,140,.18));
-    }
-
-    @keyframes ufoHover{
-      0%   { transform: translate(-50%, 0); }
-      50%  { transform: translate(-50%, -10px); }
-      100% { transform: translate(-50%, 0); }
-    }
-
-    /* If you want the outline hidden already, set this to none */
-    .screen.no-outline{ outline:none; }
   </style>
 </head>
 
 <body>
-  <div class="stage">
-    <!-- Your combined monitor/title/tag art -->
-    <img class="intro-bg" src="./intro-bg.png.png" alt="" />
-
-    <!-- This is the “screen window” where we place interactive/animated elements -->
-    <div class="screen" id="screen">
-      <img class="ufo" src="./ufo.png.png" alt="" />
+  <div class="monitorWrap">
+    <div class="screen">
+      <img class="bg" src="./intro.bg.png" alt="">
     </div>
+    <div class="monitor"></div>
   </div>
 </body>
 </html>
+
